--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ body {
 <body>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="main page.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="recipet.html"> PaymentRecipet</a>  
   <a href="about.html">About Me</a>
 </div>
