--- a/recipet.html
+++ b/recipet.html
@@ -8,7 +8,7 @@
 <body>
     <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="main page.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="recipet.html">Payment Recipet</a>
      <a href="about.html">About Me</a>
 </div>
